--- a/shiftweb5/src/main/resources/application.properties
+++ b/shiftweb5/src/main/resources/application.properties
@@ -1,34 +1,23 @@
-# Configurações básicas para conexão com o banco
 spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-spring.datasource.username=sh36708
-spring.datasource.password=230377
+spring.datasource.username=pf0954
+spring.datasource.password=fiap
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.testWhileidle=true
 spring.datasource.validationQuery=select 1
 spring.datasource.maxActive=3
-
-# Dialeto utilizado para trabalhar no banco, cada banco possui um dialeto
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
-
-# Exibe / oculta o SQL executado pelo hibernate
 spring.jpa.show-sql=true
-
-# Formata o sql exibido
 spring.jpa.properties.hibernate.format_sql=true
 
 # Informa ação inicial do Hibernate - create, update, create-drop, validate, none
-#spring.jpa.hibernate.ddl-auto=create
-
-# Executa um SQL após inicialização do hibernate, funciona apenas com create
-#spring.jpa.properties.hibernate.hbm2ddl.import_files=sql/populate-database.sql
-
-# Nível de informação do log
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type=INFO
-
 spring.datasource.hikari.connectionTimeout=10000
 spring.datasource.hikari.validationTimeout=10000
 spring.datasource.hikari.maxLifetime=1800000
 spring.datasource.hikari.leakDetectionThreshold=5
 spring.datasource.hikari.maximumPoolSize=2
 spring.jackson.serialization.fail-on-empty-beans=false
+    
+    
