Feitos ajustes vários no controller

--- a/shiftweb5/src/main/resources/application.properties
+++ b/shiftweb5/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-spring.datasource.username=pf0954
-spring.datasource.password=fiap
+spring.datasource.username=sh36708
+spring.datasource.password=230377
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.testWhileidle=true
 spring.datasource.validationQuery=select 1
@@ -19,5 +19,8 @@ spring.datasource.hikari.maxLifetime=1800000
 spring.datasource.hikari.leakDetectionThreshold=5
 spring.datasource.hikari.maximumPoolSize=2
 spring.jackson.serialization.fail-on-empty-beans=false
+
+# Executa um SQL após inicialização do hibernate, funciona apenas com create
+spring.jpa.properties.hibernate.hbm2ddl.import_files=sql/populate-database.sql
     
     
